# ha-farmbot

./: README.md  hacs.json  pyproject.toml
.github/workflows/: release-on-tag.yml
custom_components/farmbot/: __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  sensor.py  strings.json  switch.py
tests/: common.py  conftest.py  test_camera.py  test_config_flow.py  test_coordinator.py  test_entities.py
